@@ -1,3 +1,11 @@
+2013-04-15  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/ange-ftp.el (ange-ftp-run-real-handler-orig): New defun,
+	uses code from the previous `ange-ftp-run-real-handler'.
+	(ange-ftp-run-real-handler): Set it to `tramp-run-real-handler'
+	only in case that function exist.  This is needed for proper
+	unloading of Tramp.
+
 2013-04-15  Tassilo Horn  <tsdh@gnu.org>
 
 	* textmodes/reftex-vars.el (reftex-label-regexps): New defcustom.
